# napalm-panos

./: .bandit.yml  .flake8  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: supported_getters.md
napalm_panos/: __init__.py  panos.py
test/unit/: TestDriver.py  conftest.py  test_getters.py  test_version.py
test/unit/mocked_data/test_get_arp_table/normal/: _show__arp__entryname='all'____arp___show_.xml  expected_result.json
test/unit/mocked_data/test_get_arp_table/one_interface/: _show__arp__entryname='all'____arp___show_.xml  expected_result.json
test/unit/mocked_data/test_get_interfaces/empty_interfaces/: _show__interface_all__interface___show_.xml  running_config.xml
test/unit/mocked_data/test_get_interfaces/normal/: _show__interface_all__interface___show_.xml  _show__interface_ethernet1_1.143__interface___show_.xml  _show__interface_ethernet1_1__interface___show_.xml  _show__interface_ethernet1_3__interface___show_.xml  _show__interface_ethernet1_4__interface___show_.xml  _show__interface_loopback.100__interface___show_.xml  _show__interface_loopback10__interface___show_.xml  _show__interface_tunnel.100__interface___show_.xml  _show__interface_tunnel__interface___show_.xml  _show__interface_vlan.200__interface___show_.xml  _show__interface_vlan__interface___show_.xml  expected_result.json  running_config.xml
test/unit/mocked_data/test_get_interfaces_ip/normal/: _show__interface_all__interface___show_.xml  expected_result.json
